--- a/Flash Chat iOS13/Views/MessageCell.xib
+++ b/Flash Chat iOS13/Views/MessageCell.xib
@@ -22,11 +22,18 @@
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="aSo-ea-y0x">
                         <rect key="frame" x="10" y="10" width="296" height="50"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="YouAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="K6J-Yk-Sld">
+                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="KUD-lA-ahH"/>
+                                    <constraint firstAttribute="width" constant="40" id="tC4-uY-jyU"/>
+                                </constraints>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yiZ-gn-3Fq">
-                                <rect key="frame" x="0.0" y="0.0" width="236" height="50"/>
+                                <rect key="frame" x="60" y="0.0" width="176" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jeU-Pj-VJN">
-                                        <rect key="frame" x="10" y="10" width="216" height="30"/>
+                                        <rect key="frame" x="10" y="10" width="156" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" systemColor="systemBackgroundColor"/>
                                         <nil key="highlightedColor"/>
@@ -40,11 +47,11 @@
                                     <constraint firstItem="jeU-Pj-VJN" firstAttribute="leading" secondItem="yiZ-gn-3Fq" secondAttribute="leading" constant="10" id="sIe-k8-eKZ"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="K6J-Yk-Sld">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="BGx-hh-Zbb">
                                 <rect key="frame" x="256" y="0.0" width="40" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="KUD-lA-ahH"/>
-                                    <constraint firstAttribute="width" constant="40" id="tC4-uY-jyU"/>
+                                    <constraint firstAttribute="width" constant="40" id="1Ev-Yu-A9A"/>
+                                    <constraint firstAttribute="height" constant="40" id="TEI-E6-zfT"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -60,6 +67,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="label" destination="jeU-Pj-VJN" id="zVT-jn-wrY"/>
+                <outlet property="leftImageView" destination="K6J-Yk-Sld" id="lWZ-Bm-RRH"/>
                 <outlet property="messageBubble" destination="jeU-Pj-VJN" id="mNL-At-mEo"/>
                 <outlet property="rightImageView" destination="K6J-Yk-Sld" id="WpS-ya-sKc"/>
             </connections>
@@ -68,6 +76,7 @@
     </objects>
     <resources>
         <image name="MeAvatar" width="36" height="36"/>
+        <image name="YouAvatar" width="36" height="36"/>
         <namedColor name="BrandPurple">
             <color red="0.67500001192092896" green="0.43500000238418579" blue="0.9179999828338623" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
